--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ name = "rssbot"
 description = "24/7 Feed Fetcher"
 version = "581"
 authors = [
-    {name = "Bart Thate",email = "bthate@dds.nl"},
+    {name = "Bart Thate",email = "rssbotd@gmail.com"},
 ]
 readme = "README.rst"
 license = {text="Public Domain"}
