--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ classifiers = [
 [tools.setuptools]
 script-files = [
     "bin/rssbot",
+    "bin/rssbotc",
     "bin/rssbotd",
     "bin/rssbots"
 ]
