--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "rssbot"
-description = "24/7 Feed Fetcher"
+description = "24/7 Feed Fetcher."
 version = "620"
 authors = [
     {name = "Bart Thate",email = "rssbotd@gmail.com"},
@@ -23,23 +23,18 @@ classifiers = [
     'Topic :: Utilities'
 ]
 
+
+[project.scripts]
+"rssbot" = "rssbot.__main__:wrapped"
+
 [project.urls]
 "home" = "https://pypi.org/project/rssbot"
-"bugs" = "https://github.com/otpcr/rssbot/issues"
-"source" = "https://github.com/otpcr/rssbot"
+"bugs" = "https://github.com/rssbotd/rssbot/issues"
+"source" = "https://github.com/rssbotd/rssbot"
 
 
 [tool.seuptools]
-script-files = [
-    "bin/rssbot",
-]
 packages=[
     "rssbot",
     "rssbot.modules",
-]
-
-
-[tool.setuptools.data-files]
-"share/doc/rssbot" = [
-    "README.rst"
 ]
