--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "rssbot"
 description = "24/7 Feed Fetcher."
-version = "620"
+version = "630"
 authors = [
     {name = "Bart Thate",email = "rssbotd@gmail.com"},
 ]
@@ -25,7 +25,7 @@ classifiers = [
 
 
 [project.scripts]
-"rssbot" = "rssbot.main:main"
+"rssbot" = "rssbot.__main__:main"
 
 [project.urls]
 "home" = "https://pypi.org/project/rssbot"
