--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "rssbot"
-description = "24/7 Feed Fetcher"
-version = "653"
+description = "24/7 Feed Fetcher, a contribution back to society. Public Domain."
+version = "655"
 authors = [
     {name = "Bart Thate",email = "rssbotd@gmail.com"},
 ]
