don't mangle path

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "rssbot"
-description = "24/7 Feed Fetcher, a contribution back to society. Public Domain."
+description = "24/7 IRC Feed Fetcher, a contribution back to society. Public Domain."
 version = "655"
 authors = [
     {name = "Bart Thate",email = "rssbotd@gmail.com"},
